<resources>
    <string name="app_name">Lattice Innovations</string>

    <!-- RegistrationActivity -->
    <string name="reg_hint_name">Name</string>
    <string name="reg_hint_address">Address</string>
    <string name="reg_hint_mail">Email</string>
    <string name="reg_hint_phone">Phone</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_signup">Sign up</string>
    <string name="reg_syntax_password">Must contain one upper char, one lower char and a number (Length: 8–15)</string>
    <string name="reg_syntax_name">Should be at least 4 characters</string>
    <string name="reg_syntax_address">Should be at least 10 characters</string>
    <string name="reg_syntax_phone">With country code</string>
    <string name="reg_error_name">Please enter a valid name</string>
    <string name="reg_error_address">Please enter a valid address</string>
    <string name="reg_error_email">Please enter a valid email</string>
    <string name="reg_error_phone">Please enter a valid phone no.</string>
    <string name="reg_error_password">Please choose a valid password</string>
    <string name="reg_default_phone">+</string>

    <!-- UserDetailActivity -->
    <string name="user_title">User Details</string>
    <string name="user_address">Address:</string>
    <string name="user_email">Email:</string>
    <string name="user_phone">Phone Number:</string>

    <!-- HomeActivity -->
    <string name="home_title">Registered Users</string>
    <string name="home_logout">Logout</string>
</resources>
