<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.RegistrationActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/reg_hint_name"
        app:helperText="@string/reg_syntax_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:hint="@string/reg_hint_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/reg_syntax_address"
        app:layout_constraintTop_toBottomOf="@id/name_edittext_layout"
        app:layout_constraintStart_toStartOf="@id/name_edittext_layout"
        app:layout_constraintEnd_toEndOf="@id/name_edittext_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:hint="@string/reg_hint_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/address_edittext_layout"
        app:layout_constraintStart_toStartOf="@id/address_edittext_layout"
        app:layout_constraintEnd_toEndOf="@id/address_edittext_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:hint="@string/reg_hint_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:helperText="@string/reg_syntax_phone"
        app:layout_constraintTop_toBottomOf="@id/email_edittext_layout"
        app:layout_constraintStart_toStartOf="@id/email_edittext_layout"
        app:layout_constraintEnd_toEndOf="@id/email_edittext_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="@string/reg_default_phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:hint="@string/reg_hint_password"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        app:helperText="@string/reg_syntax_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/phone_edittext_layout"
        app:layout_constraintStart_toStartOf="@id/phone_edittext_layout"
        app:layout_constraintEnd_toEndOf="@id/phone_edittext_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_margin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_signup"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toBottomOf="@id/password_edittext_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>